# tauri-vue-docker-mysql-boilerplate

./: .env  bun.lockb  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml
src-tauri/src/: db.rs  lib.rs  models.rs  ubuntu_setup.rs  windows_setup.rs
src-tauri/src/db/: notes.rs
src/components/: SystemInfoNavbar.vue  UbuntuSetupModal.vue  WindowsSetupModal.vue
src/components/notes/: NotesTable.vue
src/lib/: notes.ts
